corrected wrong padding and font size

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -14653,6 +14653,14 @@ h1, h2 {
   padding: 20px 30px;
 }
 
+#page-wrapper {
+  padding: 0;
+}
+
+.nav-link {
+  font-size: 20px;
+}
+
 .has-blue-color,
 .has-blue-color:visited {
   color: #007bff;
