--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -32,3 +32,9 @@ h1, h2 {
     background: #f5f5f5;
     padding: 20px 30px;
 }
+#page-wrapper {
+    padding: 0;
+}
+.nav-link {
+    font-size: 20px;
+}
